# walletglass

./: .env  .gitignore  README.md  pyproject.toml  walletglass-site
.streamlit/: config.toml  secrets.toml
app/: app.py  theme.css
archive/walletglass_core/: constants.py
core/: build_transaction.py
data/: eth_price_db.json  etherprice.csv  known_funding_sources.json  known_withdrawal_sinks.json  last_address.json  price_cache.json  rate_limit.json  raw_alchemy_transfers.json  raw_transfers.json  signatures.json  spam_tokens.json  token_metadata.json  topic0_counts.json  topic0_unknown_counts.json  wallet_defunding.json  wallet_defunding_full.json  wallet_funding.json  wallet_funding_full.json  wallet_pnl.json  wallet_portfolio.json  wallet_portfolio_raw.json
ingestion/: alchemy_adapter.py  decoder.py  parser.py
ingestion/decoder_modules/: transfer.py  uniswap_v3.py
models/: transaction.py
mvp/: balances_covalent.py  balances_moralis.py  defunding.py  funding.py  funding_v1.py  pnl.py  price_cache.py  secrets.py
scripts/: analyze_topic0s.py  build_eth_price_db.py  count_topic0s.py  debug_eth_getlogs.py  debug_moralis_erc20.py  debug_moralis_eth.py  dump_raw_transfers.py  dump_transfers.py  test_adapter.py  test_decoder.py  test_moralis_connectivity.py  test_parse_wallet.py  test_pnl.py  test_price_cache.py  test_transfer_decode.py  test_wallet.py
tools/cex_extractor/: convert_to_walletglass_format.py  extract.js  known_funding_sources_flat.json  package-lock.json  package.json
utils/: decode.py  price_cache.py  token_metadata.py
(+21 files in other folders)
