[project]
name = "walletglass"
version = "0.1.0"
description = "On-chain wallet tracking and insights"
authors = [
    {name = "Tyler Wares"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "web3 (>=7.12.0,<8.0.0)",
    "duckdb (>=1.3.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
